# testplatform

./: .env  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CURL_EXAMPLES.sh  FILES_LIST.md  FRONTEND_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  INTEGRATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SETUP.md  TROUBLESHOOTING.md  WHAT_WAS_CREATED.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_bank.xlsx
